# Generative-AI-Final-Project

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
eval/: aggregate.py  grader.py  pipeline.py  run_eval.py  test_set.json
eval/results/: full.json  graded_full.json  graded_rag_only.json  rag_only.json  report.md
src/: agent.py  config.py  ingest.py  prompts.py  retrieve.py  tools.py  vectorstore.py
