[project]
name = "askedgar"
version = "0.1.0"
description = "AI analyst for SEC 10-K filings (RAG + tool use)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "streamlit>=1.40.0",
    "pdfplumber>=0.11.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
